k8s-manifest/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-front-k8s
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-web 
  template:
    metadata:
      labels:
        app: front-web
    spec:
      containers:
      - name: nginx 
        image: massimsd/image_tp_k8s
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /health 
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health 
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
