k8s-manifest/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-front
  namespace: tp-k8s
spec:
  type: ClusterIP
  selector:
    app: front-web
  ports:
    - port: 80
      targetPort: 3000
