k8s-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tp-k8s
spec:
  ingressClassName: nginx
  rules:
  - host: "k8s.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-front
            port:
              number: 80
